@@ -1,6 +1,4 @@
-DIST rsstorrent-0.6.tar.gz 9343 SHA256 d278588d49987d913a2eb86e0cd14adfc0b20957ca4b4ca06fb2100ee39e929d SHA512 7f57610129443e5c24c90be1c32bc5855e0445671fb5b6089edb9017f7d57e5d96b919f6e25042cc55ab7682a5393a4052331c2cb9831f8c964480800f57b6c4 WHIRLPOOL 0fcde37e1a2d87f07073477e614df3d575ab4fca7838b388db56e1274f23a890cc6096bc5460b227987db854024eafeafd5def8ab62585e30ac0e94a323c0c6a
-DIST rsstorrent-0.7.tar.gz 10007 SHA256 79a244d07bf7974d2ee7f565c805c798ac5abd1036c0c4969c27b8e72d2fa39b SHA512 1e0ed9e122ff2aa8641a032544197821b4528de38918dc61b105ae91a011487a4ab7facefe66cfc36966931e22a914f4ac8102929c6346514fc226584e47412a WHIRLPOOL ef97c50f987882d7b6b7e7e7eaaf22018ec77a330956b4cbfd40ed677a90243097f4384d6fb538f1a5b8b303836b94fb1a1975c05cba1df353de35f139f0d8cb
-EBUILD rsstorrent-0.6-r1.ebuild 1150 SHA256 9e1e0b211d23497bcc526f8c4d4ec8761e98f0dc035283ea3ee15b8add433504 SHA512 cd641627cc2fea0cd2e77c3b4f197a6a95e29a16e348a990a2095afaf2d2ed7e4f47380abb46343dbb6d7336edf993f3bb8f56215fd8e31881a67e28f86e7288 WHIRLPOOL e20ed84a4741dd085456a3b2589ecdbb83465f7da593d4fa7015fe23eea5986604ead9f8d0c6192ca64ee9f7d7ce1112d09f740c234d0837c76048160fa627fc
-EBUILD rsstorrent-0.7.ebuild 1160 SHA256 a456aaae77f9ba8adf1083bfff213630b9a5e86f12bc71a7fd17784c3820075e SHA512 ec86a988a436df11a7374d97dec4f6705adf3f32faff0d5ffeaea782f9d999e1d7f1e94687bff81cf15493ad23e20f06617eb700b5c3f43bf776b5a2cb136263 WHIRLPOOL d7d003e263d530742cebbbc78ba1ba420c4322eceb2c343108ce38f9421b0e38f8bed9efdfd734143e5f8abd44d2a1a2ea204903c6b78b2b243fb0c314da0e02
-MISC ChangeLog 728 SHA256 167e356fba9aa17baa0b3ae40a54f9d496656cbe6af8ac11b2721f13e952e254 SHA512 646d5c92a68f608ff2a79bb7c87bca77cb437bdf8f16d8c8dd5f0b41ada0ac2052ce023a4aa0964ee6958d8093c544ab48a6648217b443126dd257b8bfd028fc WHIRLPOOL a74f6eabf3d97dbd268fbc4e1a3a933a4d337ea5c3d6f363c89ad12d94beb6c16bd5a2eca197249e30b08f5675e585722b7972bcdaf865f7f7eb9c66a1f2a068
+DIST rsstorrent-0.8.tar.gz 9637 SHA256 68ad6266a50f702a7a12b60c65cee9059c97c276b760c53d33acd2243c5b40e6 SHA512 01aed7a5483c132d094f4f72e9dc83d74285f90083e3c1323a4572ab9c54364a8345e28240cd9940fe5577f36ee6c86d9de7972ccde70e522d53424571ca04df WHIRLPOOL 0d5d26d110afccaa460625b3de083643314b03382d82fc7ddca48bfd92d3d87baf87a7a80b7ac228ec12e7cb046ad681a61a1458e70bc479344aec3d10ae5cfe
+EBUILD rsstorrent-0.8.ebuild 1153 SHA256 94889f96f374b92d6a5602dc3297e9e2c52d035bcf35b091c8af3c930cf4e5ed SHA512 b4e5168cf832031c478a1b3cc55d914d5d0733c7a08e61c3e2d840b5fc7277abab45c38f908164915ba768f680856fe07231ace9d997fbae5f11e0647d6a26ab WHIRLPOOL 4f24ffaef771dc0931cf2e4d3d4fd31653ded0408f69a4eada046e2ec392ad200db105c0deaf2bd8c8bf8d1bc24a86be014fdebb389b8604ebe7540a3a79aa44
+MISC ChangeLog 1007 SHA256 9e5f1b78754146e232f839ca01268c2cabfd2914c5ead7389d5da921456798bd SHA512 69232f4235e1bc216eaf53838de0e173557808f48d787633d4b0f7a849609ef48eeed9aaa748556b75629eebdc796beb7ce0025efa984981a1df22a2673cdc0d WHIRLPOOL 00c47dcdf7e6b8684a5e74a01002e756ead34e9ca0629420dc4815d217b18690ac2aae9fa123eeaff666daff2445f0adc93f2b5f886576f3fff134ebc47bc1f5
 MISC metadata.xml 331 SHA256 2185e5c2f348af8d2ecdb14e05ccf423abf2e52e4b74c3e159a0015f5e44319d SHA512 9eaecda7f7f083340d886268ac42df9f1e4b7a7940e59d8d3fff9cb8cf5d39378f2d76ad0c666d9213e5a99c99ba940e73bfba66cd8ffdab1647858d44ae4a4d WHIRLPOOL c2dd8ae46d57b24eb0c6e9b412306abfe0acfd58d5a40260428be54ffaea3d83f6aeb4c2fa7d5cbae288cf5e16db35b06f30653529d530f16504f84acbfc1e21
