@@ -1,9 +1,9 @@
-# Copyright 1999-2017 Gentoo Foundation
+# Copyright 1999-2020 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
-EAPI="6"
+EAPI="7"
 
-PYTHON_COMPAT=( python3_{2,3,4,5,6} )
+PYTHON_COMPAT=( python3_{6,7,8} )
 
 inherit distutils-r1 vcs-snapshot
 
